--- a/css/mobile.css
+++ b/css/mobile.css
@@ -504,8 +504,8 @@ main {
 	flex-direction: column;
 }
 
-.shop-card:nth-child(n + 3) {
-	margin-top: 28px;
+.shop-card:nth-child(n + 2) {
+	margin-top: 25px;
 }
 
 .shop-card-img-box {
@@ -862,7 +862,7 @@ main {
 
 
 
-@media (max-width: 640px) and (orientation:landscape) {
+@media (orientation: landscape) and (max-width: 640px) {
 	
 	.cards-trand {
 		display: flex;
